--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,24 @@
+
 <!DOCTYPE html>
-<!-- saved from url=(0062)https://storage.googleapis.com/olly-work-experience/index.html -->
-<html lang="en" ml-update="aware"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IMC Uniforms</title>
-    <link rel="stylesheet" href="./index_files/style.css">
+    <link rel="stylesheet" href="./style.css">
     <!-- <link rel="icon" href="./favicon.ico" type="image/x-icon"> -->
-    <script async="" src="./index_files/sensor.js.download"></script><script>(function(n,t,i,r){var u,f;n[i]=n[i]||{},n[i].initial={accountCode:"WORKE11123",host:"WORKE11123.pcapredict.com"},n[i].on=n[i].on||function(){(n[i].onq=n[i].onq||[]).push(arguments)},u=t.createElement("script"),u.async=!0,u.src=r,f=t.getElementsByTagName("script")[0],f.parentNode.insertBefore(u,f)})(window,document,"pca","//WORKE11123.pcapredict.com/js/sensor.js")</script>
+    <script>(function(n,t,i,r){var u,f;n[i]=n[i]||{},n[i].initial={accountCode:"WORKE11123",host:"WORKE11123.pcapredict.com"},n[i].on=n[i].on||function(){(n[i].onq=n[i].onq||[]).push(arguments)},u=t.createElement("script"),u.async=!0,u.src=r,f=t.getElementsByTagName("script")[0],f.parentNode.insertBefore(u,f)})(window,document,"pca","//WORKE11123.pcapredict.com/js/sensor.js")</script>
   </head>
   <body>
     <header class="main-header">
         <div class="centered">
             <div class="header-branding">
-                <a href="https://storage.googleapis.com/olly-work-experience/index.html"><h1>IMC Uniforms</h1></a>
+                <a href="./index.html"><h1>IMC Uniforms</h1></a>
                 <nav class="nav">
-                    <a href="https://storage.googleapis.com/olly-work-experience/index.html">About</a>
-                    <a href="https://storage.googleapis.com/olly-work-experience/index.html">Contact</a>
-                    <a href="https://storage.googleapis.com/olly-work-experience/products.html">Our Products</a>
+                    <a href="">About</a>
+                    <a href="">Contact</a>
+                    <a href="./products.html">Our Products</a>
                 </nav>
             </div>
         </div>
@@ -29,26 +30,26 @@
             <div class="half text">
                 <h1>IMC provides all your uniform needs at affordable prices!</h1>
                 <p>Everything from school uniforms to personalised businesses, we can fill your needs!</p>
-                <p class="button1"><a href="https://storage.googleapis.com/olly-work-experience/products.html"><button class="button">Shop Now!</button></a></p>
+                <p class="button1"><a href="./products.html"><button class="button">Shop Now!</button></a></p>
             </div>
             <div class="half">
-                <img src="./index_files/Uniform.example.jpg" alt="Group of children in school uniform" class="img1">
+                <img src="./images/Uniform.example.jpg" alt="Group of children in school uniform" class="img1">
             </div>           
         </section>
 
         <section class="split">
             <div class="half">
-                <img src="./index_files/celebration.jpg" alt="A celebration" class="img1 img2">
+                <img src="./images/celebration.jpg" alt="A celebration" class="img1 img2">
             </div>
             <div class="half text">
                 <h1>Celebrating our launch!!</h1>
                 <p class="offer">To celebrate our launch we are offering 20% off on all orders over £300!</p>
-                <p class="button1"><a href="https://storage.googleapis.com/olly-work-experience/products.html"><button class="button">Shop Now!</button></a></p>
+                <p class="button1"><a href="./products.html"><button class="button">Shop Now!</button></a></p>
             </div>
         </section>
        
     </main>
-    <script src="./index_files/jquery-3.7.0.min.js.download" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-	<script src="./index_files/script.js.download"></script>
-  
-</body></html>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js" integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
+	<script src="script.js"></script>
+  </body>
+</html>
